php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55118 Imcomplete start message
Submitted: 2011-07-03 10:31 UTC Modified: 2011-07-03 10:45 UTC
From: frederic dot hardy at mageekbox dot net Assigned: felipe (profile)
Status: Closed Package: Built-in web server
PHP Version: 5.4SVN-2011-07-03 (SVN) OS: MacOS 10.6
Private report: No CVE-ID: None
 [2011-07-03 10:31 UTC] frederic dot hardy at mageekbox dot net
Description:
------------
When built-in web server start, it display a message in the console.
This message is incomplete, because document root is not displayed if -t option is 
not used.

Expected result:
----------------
PHP Development Server is listening on localhost:8080 in 
path/to/current/directory. ... Press Ctrl-C to quit.

Actual result:
--------------
PHP Development Server is listening on localhost:8080 in . ... Press Ctrl-C to 
quit.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-07-03 10:45 UTC] felipe@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=312855
Log: - Fixed bug #55118 (Imcomplete start message)
 [2011-07-03 10:45 UTC] felipe@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: felipe
 [2011-07-03 10:45 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:50 UTC] laruence@php.net
Automatic comment on behalf of felipe
Revision: http://git.php.net/?p=php-src.git;a=commit;h=df10314070db8a065a078c300d1ddfa30d70d93c
Log: - Fixed bug #55118 (Imcomplete start message)
 [2012-07-24 23:41 UTC] rasmus@php.net
Automatic comment on behalf of felipe
Revision: http://git.php.net/?p=php-src.git;a=commit;h=df10314070db8a065a078c300d1ddfa30d70d93c
Log: - Fixed bug #55118 (Imcomplete start message)
 [2013-11-17 09:37 UTC] laruence@php.net
Automatic comment on behalf of felipe
Revision: http://git.php.net/?p=php-src.git;a=commit;h=df10314070db8a065a078c300d1ddfa30d70d93c
Log: - Fixed bug #55118 (Imcomplete start message)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 17:00:01 2026 UTC