- Fixed bug #55118 (Imcomplete start message)

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@312855 c90b9560-bf6c-de11-be94-00142212c4b1